--- a/views/layouts/default.hbs
+++ b/views/layouts/default.hbs
@@ -10,7 +10,7 @@
 <body>
   <div>
       <h1>Welcome to Happy2 application</h1>
-      #My first change
+      My first change
     {{{body}}}
 </div>
 <div>
