some message new

--- a/views/layouts/default.hbs
+++ b/views/layouts/default.hbs
@@ -11,7 +11,7 @@
   <div>
       <h1>Welcome to Happy2 application</h1>
       My first change
-      Feature Branch
+      Feature Branch new
     {{{body}}}
 </div>
 <div>
